# GhidraDragon_in_Japanese

./: British_or_American.crx  CMakeCache.txt  README.md  combined_engine_hex_editor_disassember_debugger_emulation.py  ghidradragon.js  ghidradragon.py  setup.py
British_or_American/: content.js  popup.html  popup.js
ghidradragon_chrome_ext/: manifest.json  popup.html  popup.js
src/: CMakeLists.txt  binding.cpp  softtmp.cpp  softtpm.cpp  softtpm.hpp  tool.cpp
